--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diversify</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
     <!-- Custom CSS -->
-     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
-<body>
-    <header id="header">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html"><i class="fa-solid fa-globe"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -31,14 +30,27 @@
             </div>
         </div>
     </nav>
-    <div class="row text-center">
-        <h1>Diversify</h1>
-        <h2>Diversity and Inclusion in the workplace</h2>
-    </div>
+    <header class="container section">
+        <div id="header" class="row text-center justify-content-center">
+            <div class="col-12 col-lg-4">
+                <h1 class="header-title">Diversify</h1>
+            </div>
+            <div class="row text-center justify-content-center">
+                <div class="col-12 col-lg-4">
+                    <h2 class="header-title">
+                        Diversity and Inclusion in the workplace
+                    </h2>
+                </div>
+            </div>
+        </div>
     </header>
 
 
 
+
+
+
+    
     <!-- Favicon JS -->
     <script src="https://kit.fontawesome.com/af2f228ca5.js" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
