added main content section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="container section">
         <div id="header" class="row text-center justify-content-center">
             <div class="col-12 col-lg-4">
-                <h1 class="header-title">Diversify</h1>
+                <h1 class="header-title display-1">Diversify</h1>
             </div>
             <div class="row text-center justify-content-center">
                 <div class="col-12 col-lg-4">
@@ -41,16 +41,59 @@
                         Diversity and Inclusion in the workplace
                     </h2>
                 </div>
+                <div class="col-12">
+                    <p>Intro text</p>
+                </div>
             </div>
         </div>
     </header>
 
+    <div class="container section">
+        <div class="row text-center">
+            <h2>Information</h2>
+            <div class="col-12 col-lg-6 col-xl-3 p-2">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 col-xl-3 p-2">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 col-xl-3 p-2">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 col-xl-3 p-2">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
 
-    
     <!-- Favicon JS -->
     <script src="https://kit.fontawesome.com/af2f228ca5.js" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
