reformatted links and lists section and updated color scheme, reformatting bootstrap elemets to accomodate

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="#information">Information</a>
-                    <a class="nav-link" href="#">Pricing</a>
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#best-practices">Best Practices</a>
+                    <a class="nav-link" href="#links">Additional Resources</a>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
             <div class="col-12 col-md-6 col-xl-3 p-2">
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <h6 class="card-subtitle mb-2 display-6">Card subtitle</h6>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                     </div>
@@ -63,7 +63,7 @@
             <div class="col-12 col-md-6 col-xl-3 p-2">
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <h6 class="card-subtitle mb-2 display-6">Card subtitle</h6>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                     </div>
@@ -72,7 +72,7 @@
             <div class="col-12 col-md-6 col-xl-3 p-2">
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <h6 class="card-subtitle mb-2 display-6">Card subtitle</h6>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                     </div>
@@ -81,7 +81,7 @@
             <div class="col-12 col-md-6 col-xl-3 p-2">
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <h6 class="card-subtitle mb-2 display-6">Card subtitle</h6>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                     </div>
@@ -90,19 +90,66 @@
         </div>
     </div>
 
-    <div id="list" class="container section">
+    <div id="best-practices" class="container section">
         <div class="row">
-                    <h2 class="text-center">List</h2>
-        <ul class="list-group">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A fourth item</li>
-            <li class="list-group-item">And a fifth one</li>
-        </ul>
+            <div class="col-12">
+                <h2 class="text-center">List</h2>
+                <ul class="list-group">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
+                    <li class="list-group-item">And a fifth one</li>
+                </ul>
+            </div>
         </div>
     </div>
 
+    <div id="links" class="section container">
+        <div class="row">
+            <h2 class="text-center">Links</h2>
+            <div class="col-12 col-md-6">
+
+
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">Trans inclusion</p>
+                        <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">Trans inclusion</p>
+                        <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">Trans inclusion</p>
+                        <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">Trans inclusion</p>
+                        <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        Zoe Perry
+    </footer>
 
 
     <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
