added some content to each main secction

--- a/index.html
+++ b/index.html
@@ -54,18 +54,16 @@
             <div class="col-12 col-md-6 col-xl-3 p-2">
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 display-6">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h6 class="card-subtitle mb-2 display-6">Diversity</h6>
+                        <p class="card-text">Diversity is about the range of employees in your company. This can vary from people of different ages, religions, ethnicities, genders and people with disabilities. Diversity also includes valuing these differences.</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-2">
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 display-6">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h6 class="card-subtitle mb-2 display-6">Inclusion</h6>
+                        <p class="card-text">Inclusion is about letting everyone feel that their voices are heard at work. It lets all employees feel like they're able to contribute with different ideas, raise issues or suggestions they might have, and even attempt to optimise workflow within the company.</p>
                     </div>
                 </div>
             </div>
@@ -90,31 +88,31 @@
         </div>
     </div>
 
-    <div id="best-practices" class="container section">
+    <div id="best-practices" class="container section mt-4">
         <div class="row">
             <div class="col-12">
-                <h2 class="text-center">List</h2>
+                <h2 class="text-center display-6">Best practices for fostering and maintaining diversity and inclusion</h2>
                 <ul class="list-group">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                    <li class="list-group-item">And a fifth one</li>
+                    <li class="list-group-item"><i class="fa-regular fa-clipboard"></i>  Set measurable diversity goals</li>
+                    <li class="list-group-item"><i class="fa-solid fa-square-plus"></i>  Create ways to allow employees to open up about what's wrong</li>
+                    <li class="list-group-item"><i class="fa-solid fa-comment"></i>  Encourage people to get talking</li>
+                    <li class="list-group-item"><i class="fa-solid fa-pen-to-square"></i>  Develop written policies</li>
+                    <li class="list-group-item"><i class="fa-solid fa-graduation-cap"></i>  Maintain regular staff training</li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div id="links" class="section container">
-        <div class="row">
-            <h2 class="text-center">Links</h2>
+    <div id="links" class="section container mt-4">
+        <div class="row text-center">
+            <h2>Additional Resources</h2>
             <div class="col-12 col-md-6">
 
 
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">Trans inclusion</p>
-                        <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+                        <p class="card-text">acas - improving equality diversity and inclusion</p>
+                        <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" class="btn" target="_blank" rel="noopener" aria-label="button to the acas website (opens in a new tab)">acas website</a>
                     </div>
                 </div>
 
