--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">Trans inclusion</p>
-                        <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+                        <a href="#" class="btn">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">Trans inclusion</p>
-                        <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+                        <a href="#" class="btn">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">Trans inclusion</p>
-                        <a href="#" class="btn btn-primary btn-sm">Go somewhere</a>
+                        <a href="#" class="btn">Go somewhere</a>
                     </div>
                 </div>
             </div>
