styled footer and added bottom margin to additional resources section for better visuals

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
     </div>
 
-    <div id="links" class="section container mt-4">
+    <div id="links" class="section container my-4">
         <div class="row text-center">
             <h2>Additional Resources</h2>
             <div class="col-12 col-md-6">
