added padding to all sections to ensure title is shown when using navbar

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-    <div id="best-practices" class="container section mt-4">
+    <div id="best-practices" class="container section">
         <div class="row">
             <div class="col-12">
                 <h2 class="text-center display-6">Best practices for fostering and maintaining diversity and inclusion</h2>
@@ -103,7 +103,7 @@
         </div>
     </div>
 
-    <div id="links" class="section container my-4">
+    <div id="links" class="section container pb-4">
         <div class="row text-center">
             <h2>Additional Resources</h2>
             <div class="col-12 col-md-6">
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="mt-auto">
         Zoe Perry
     </footer>
 
