made sure header title and subtitle move to left on tablets and larger

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </div>
     </nav>
     <header class="container section">
-        <div id="header" class="row text-center justify-content-center">
+        <div id="header" class="row text-center">
             <div class="col-12 col-lg-4">
                 <h1 class="header-title display-1">Diversify</h1>
             </div>
-            <div class="row text-center justify-content-center">
+            <div class="row text-center">
                 <div class="col-12 col-lg-4">
                     <h2 class="header-title">
                         Diversity and Inclusion in the workplace
