--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <div class="col-12 col-lg-4">
                 <h1 class="header-title display-1">Diversify</h1>
             </div>
-            <div class="row text-center">
+            <div class="row text-center justify-content-between">
                 <div class="col-12 col-lg-4">
                     <h2 class="header-title">
                         Diversity and Inclusion in the workplace
                     </h2>
                 </div>
-                <div class="col-12">
-                    <p>Intro text</p>
+                <div class="col-12 col-lg-5">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
         </div>
