increased font size of navbar favicon

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
             </div>
         </div>
     </nav>
-    <header class="container section">
-        <div id="header" class="row text-center">
-            <div class="col-12 col-lg-4">
+    <header class="container-fluid section justify-content-center">
+        <div id="header" class="row text-center ">
+            <div class="col-12 col-md-4">
                 <h1 class="header-title display-1">Diversify</h1>
             </div>
             <div class="row text-center justify-content-between">
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-md-4">
                     <h2 class="header-title">
                         Diversity and Inclusion in the workplace
                     </h2>
                 </div>
-                <div class="col-12 col-lg-5">
+                <div class="col-12 col-md-5">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
@@ -50,7 +50,7 @@
 
     <div id="information" class="container section">
         <div class="row text-center">
-            <h2>Information</h2>
+            <h2 class="display-4">Information</h2>
             <div class="col-12 col-md-6 col-xl-3 p-2">
                 <div class="card">
                     <div class="card-body">
