styled header background image to look good on all devices

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">acas - improving equality diversity and inclusion</p>
-                        <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" class="btn" target="_blank" rel="noopener" aria-label="button to the acas website (opens in a new tab)">acas website</a>
+                        <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" class="btn" target="_blank" rel="noopener" aria-label="button to the acas website (opens in a new tab)">Go to the acas website</a>
                     </div>
                 </div>
 
