--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </h2>
                 </div>
                 <div class="col-12 col-md-5">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Everyone in the workplace has a right to experiencing diversity and inclusion. Read on below to find out more, and how you can help both your employees and your business!</p>
                 </div>
             </div>
         </div>
