added bootstrap classes to ensure uniformity between information cards

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </h2>
                 </div>
                 <div class="col-12 col-md-5">
-                    <p>Everyone in the workplace has a right to experiencing diversity and inclusion. Read on below to find out more, and how you can help both your employees and your business!</p>
+                    <p class="display-6">Everyone in the workplace has a right to experiencing diversity and inclusion. Read on below to find out more, and how you can help both your employees and your business!</p>
                 </div>
             </div>
         </div>
@@ -51,37 +51,35 @@
     <div id="information" class="container section">
         <div class="row text-center">
             <h2 class="display-4">Information</h2>
-            <div class="col-12 col-md-6 col-xl-3 p-2">
-                <div class="card">
+            <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
+                <div class="card flex-fill">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 display-6">Diversity</h6>
+                        <h3 class="card-subtitle mb-2 display-6">Diversity</h6>
                         <p class="card-text">Diversity is about the range of employees in your company. This can vary from people of different ages, religions, ethnicities, genders and people with disabilities. Diversity also includes valuing these differences.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-3 p-2">
-                <div class="card">
+            <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
+                <div class="card flex-fill">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 display-6">Inclusion</h6>
+                        <h3 class="card-subtitle mb-2 display-6">Inclusion</h6>
                         <p class="card-text">Inclusion is about letting everyone feel that their voices are heard at work. It lets all employees feel like they're able to contribute with different ideas, raise issues or suggestions they might have, and even attempt to optimise workflow within the company.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-3 p-2">
-                <div class="card">
+            <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
+                <div class="card flex-fill">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 display-6">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-subtitle mb-2 display-6">Equality</h6>
+                        <p class="card-text">Both diversity and inclusion lead to a feeling of equality in the workplace. This fosters less resentment between employees and an overall happier and more producitve workforce.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-xl-3 p-2">
-                <div class="card">
+            <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
+                <div class="card flex-fill">
                     <div class="card-body">
-                        <h6 class="card-subtitle mb-2 display-6">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <h3 class="card-subtitle mb-2 display-6">Common Concerns</h6>
+                        <p class="card-text">Many are concerned that the work to improve diversity and inclusion is merely for show. By educating yourself and taking steps to implement what you learn, you can allay these fears and foster greater trust within your company.</p>
                     </div>
                 </div>
             </div>
@@ -111,8 +109,8 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">acas - improving equality diversity and inclusion</p>
-                        <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" class="btn" target="_blank" rel="noopener" aria-label="button to the acas website (opens in a new tab)">Go to the acas website</a>
+                        <p class="card-text">acas - Improving equality diversity and inclusion</p>
+                        <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" class="btn" target="_blank" rel="noopener" aria-label="link to the acas website (opens in a new tab)">Go to the acas website</a>
                     </div>
                 </div>
 
@@ -121,8 +119,8 @@
             <div class="col-12 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">Trans inclusion</p>
-                        <a href="#" class="btn">Go somewhere</a>
+                        <p class="card-text">hrdept - Diversity, inclusion and equality</p>
+                        <a href="https://www.hrdept.co.uk/services/diversity-inclusion-equality-workplace/" class="btn" target="_blank" rel="noopener" aria-label="link to the hrdept website (opens in a new tab)">Go to the hrdept website</a>
                     </div>
                 </div>
             </div>
