styled introductory paragraph size to look good on all devices

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </h2>
                 </div>
                 <div class="col-12 col-md-5">
-                    <p class="display-6">Everyone in the workplace has a right to experiencing diversity and inclusion. Read on below to find out more, and how you can help both your employees and your business!</p>
+                    <p class="">Everyone in the workplace has a right to experiencing diversity and inclusion. Read on below to find out more, and how you can help both your employees and your business!</p>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
             <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
                 <div class="card flex-fill">
                     <div class="card-body">
-                        <h3 class="card-subtitle mb-2 display-6">Common Concerns</h6>
+                        <h3 class="card-subtitle mb-2 display-6">Concerns</h6>
                         <p class="card-text">Many are concerned that the work to improve diversity and inclusion is merely for show. By educating yourself and taking steps to implement what you learn, you can allay these fears and foster greater trust within your company.</p>
                     </div>
                 </div>
@@ -127,16 +127,16 @@
             <div class="col-12 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">Trans inclusion</p>
-                        <a href="#" class="btn">Go somewhere</a>
+                        <p class="card-text">cpdonline - All about Diversity and Inclusion in the Workplace</p>
+                        <a href="https://cpdonline.co.uk/knowledge-base/safeguarding/diversity-and-inclusion-in-the-workplace" class="btn" target="_blank" rel="noopener" aria-label="link to the cpdonline website (opens in a new tab)">Go to the cpdonline website</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">Trans inclusion</p>
-                        <a href="#" class="btn">Go somewhere</a>
+                        <p class="card-text">British Business Bank - How to promote diversity and inclusivity in the workplace </p>
+                        <a href="https://www.british-business-bank.co.uk/business-guidance/guidance-articles/staffing/how-to-promote-diversity-and-inclusivity-in-the-workplace" class="btn" target="_blank" rel="noopener" aria-label="link to the british business bank website (opens in a new tab)">Go to the British Business Bank website</a>
                     </div>
                 </div>
             </div>
