changed closing h3 tags from h6 to h3. Added h-100 class to information cards for uniformity

--- a/index.html
+++ b/index.html
@@ -52,33 +52,33 @@
         <div class="row text-center">
             <h2 class="display-4">Information</h2>
             <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
-                <div class="card flex-fill">
+                <div class="card flex-fill h-100">
                     <div class="card-body">
-                        <h3 class="card-subtitle mb-2 display-6">Diversity</h6>
+                        <h3 class="card-subtitle mb-2 display-6">Diversity</h3>
                         <p class="card-text">Diversity is about the range of employees in your company. This can vary from people of different ages, religions, ethnicities, genders and people with disabilities. Diversity also includes valuing these differences.</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
-                <div class="card flex-fill">
+                <div class="card flex-fill h-100">
                     <div class="card-body">
-                        <h3 class="card-subtitle mb-2 display-6">Inclusion</h6>
+                        <h3 class="card-subtitle mb-2 display-6">Inclusion</h3>
                         <p class="card-text">Inclusion is about letting everyone feel that their voices are heard at work. It lets all employees feel like they're able to contribute with different ideas, raise issues or suggestions they might have, and even attempt to optimise workflow within the company.</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
-                <div class="card flex-fill">
+                <div class="card flex-fill h-100">
                     <div class="card-body">
-                        <h3 class="card-subtitle mb-2 display-6">Equality</h6>
+                        <h3 class="card-subtitle mb-2 display-6">Equality</h3>
                         <p class="card-text">Both diversity and inclusion lead to a feeling of equality in the workplace. This fosters less resentment between employees and an overall happier and more producitve workforce.</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-xl-3 p-2 d-flex">
-                <div class="card flex-fill">
+                <div class="card flex-fill h-100">
                     <div class="card-body">
-                        <h3 class="card-subtitle mb-2 display-6">Concerns</h6>
+                        <h3 class="card-subtitle mb-2 display-6">Concerns</h3>
                         <p class="card-text">Many are concerned that the work to improve diversity and inclusion is merely for show. By educating yourself and taking steps to implement what you learn, you can allay these fears and foster greater trust within your company.</p>
                     </div>
                 </div>
