--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Diversify. Website for information on diversity and inclusion in the workplace.">
+    <meta name="keywords" content="diversify, diversity, inclusion, equality, workplace">
+    <!-- Title -->
     <title>Diversify</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -42,7 +46,8 @@
                     </h2>
                 </div>
                 <div class="col-12 col-md-5">
-                    <p class="">Everyone in the workplace has a right to experiencing diversity and inclusion. Read on below to find out more, and how you can help both your employees and your business!</p>
+                    <p class="">Everyone in the workplace has a right to experiencing diversity and inclusion. Read on
+                        below to find out more, and how you can help both your employees and your business!</p>
                 </div>
             </div>
         </div>
@@ -55,7 +60,9 @@
                 <div class="card flex-fill h-100">
                     <div class="card-body">
                         <h3 class="card-subtitle mb-2 display-6">Diversity</h3>
-                        <p class="card-text">Diversity is about the range of employees in your company. This can vary from people of different ages, religions, ethnicities, genders and people with disabilities. Diversity also includes valuing these differences.</p>
+                        <p class="card-text">Diversity is about the range of employees in your company. This can vary
+                            from people of different ages, religions, ethnicities, genders and people with disabilities.
+                            Diversity also includes valuing these differences.</p>
                     </div>
                 </div>
             </div>
@@ -63,7 +70,10 @@
                 <div class="card flex-fill h-100">
                     <div class="card-body">
                         <h3 class="card-subtitle mb-2 display-6">Inclusion</h3>
-                        <p class="card-text">Inclusion is about letting everyone feel that their voices are heard at work. It lets all employees feel like they're able to contribute with different ideas, raise issues or suggestions they might have, and even attempt to optimise workflow within the company.</p>
+                        <p class="card-text">Inclusion is about letting everyone feel that their voices are heard at
+                            work. It lets all employees feel like they're able to contribute with different ideas, raise
+                            issues or suggestions they might have, and even attempt to optimise workflow within the
+                            company.</p>
                     </div>
                 </div>
             </div>
@@ -71,7 +81,9 @@
                 <div class="card flex-fill h-100">
                     <div class="card-body">
                         <h3 class="card-subtitle mb-2 display-6">Equality</h3>
-                        <p class="card-text">Both diversity and inclusion lead to a feeling of equality in the workplace. This fosters less resentment between employees and an overall happier and more producitve workforce.</p>
+                        <p class="card-text">Both diversity and inclusion lead to a feeling of equality in the
+                            workplace. This fosters less resentment between employees and an overall happier and more
+                            producitve workforce.</p>
                     </div>
                 </div>
             </div>
@@ -79,7 +91,9 @@
                 <div class="card flex-fill h-100">
                     <div class="card-body">
                         <h3 class="card-subtitle mb-2 display-6">Concerns</h3>
-                        <p class="card-text">Many are concerned that the work to improve diversity and inclusion is merely for show. By educating yourself and taking steps to implement what you learn, you can allay these fears and foster greater trust within your company.</p>
+                        <p class="card-text">Many are concerned that the work to improve diversity and inclusion is
+                            merely for show. By educating yourself and taking steps to implement what you learn, you can
+                            allay these fears and foster greater trust within your company.</p>
                     </div>
                 </div>
             </div>
@@ -89,13 +103,17 @@
     <div id="best-practices" class="container section">
         <div class="row">
             <div class="col-12">
-                <h2 class="text-center display-6">Best practices for fostering and maintaining diversity and inclusion</h2>
+                <h2 class="text-center display-6">Best practices for fostering and maintaining diversity and inclusion
+                </h2>
                 <ul class="list-group">
-                    <li class="list-group-item"><i class="fa-regular fa-clipboard"></i>  Set measurable diversity goals</li>
-                    <li class="list-group-item"><i class="fa-solid fa-square-plus"></i>  Create ways to allow employees to open up about what's wrong</li>
-                    <li class="list-group-item"><i class="fa-solid fa-comment"></i>  Encourage people to get talking</li>
-                    <li class="list-group-item"><i class="fa-solid fa-pen-to-square"></i>  Develop written policies</li>
-                    <li class="list-group-item"><i class="fa-solid fa-graduation-cap"></i>  Maintain regular staff training</li>
+                    <li class="list-group-item"><i class="fa-regular fa-clipboard"></i> Set measurable diversity goals
+                    </li>
+                    <li class="list-group-item"><i class="fa-solid fa-square-plus"></i> Create ways to allow employees
+                        to open up about what's wrong</li>
+                    <li class="list-group-item"><i class="fa-solid fa-comment"></i> Encourage people to get talking</li>
+                    <li class="list-group-item"><i class="fa-solid fa-pen-to-square"></i> Develop written policies</li>
+                    <li class="list-group-item"><i class="fa-solid fa-graduation-cap"></i> Maintain regular staff
+                        training</li>
                 </ul>
             </div>
         </div>
@@ -110,7 +128,9 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">acas - Improving equality diversity and inclusion</p>
-                        <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" class="btn" target="_blank" rel="noopener" aria-label="link to the acas website (opens in a new tab)">Go to the acas website</a>
+                        <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" class="btn"
+                            target="_blank" rel="noopener" aria-label="link to the acas website (opens in a new tab)">Go
+                            to the acas website</a>
                     </div>
                 </div>
 
@@ -120,7 +140,9 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">hrdept - Diversity, inclusion and equality</p>
-                        <a href="https://www.hrdept.co.uk/services/diversity-inclusion-equality-workplace/" class="btn" target="_blank" rel="noopener" aria-label="link to the hrdept website (opens in a new tab)">Go to the hrdept website</a>
+                        <a href="https://www.hrdept.co.uk/services/diversity-inclusion-equality-workplace/" class="btn"
+                            target="_blank" rel="noopener"
+                            aria-label="link to the hrdept website (opens in a new tab)">Go to the hrdept website</a>
                     </div>
                 </div>
             </div>
@@ -128,15 +150,22 @@
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">cpdonline - All about Diversity and Inclusion in the Workplace</p>
-                        <a href="https://cpdonline.co.uk/knowledge-base/safeguarding/diversity-and-inclusion-in-the-workplace" class="btn" target="_blank" rel="noopener" aria-label="link to the cpdonline website (opens in a new tab)">Go to the cpdonline website</a>
+                        <a href="https://cpdonline.co.uk/knowledge-base/safeguarding/diversity-and-inclusion-in-the-workplace"
+                            class="btn" target="_blank" rel="noopener"
+                            aria-label="link to the cpdonline website (opens in a new tab)">Go to the cpdonline
+                            website</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">British Business Bank - How to promote diversity and inclusivity in the workplace </p>
-                        <a href="https://www.british-business-bank.co.uk/business-guidance/guidance-articles/staffing/how-to-promote-diversity-and-inclusivity-in-the-workplace" class="btn" target="_blank" rel="noopener" aria-label="link to the british business bank website (opens in a new tab)">Go to the British Business Bank website</a>
+                        <p class="card-text">British Business Bank - How to promote diversity and inclusivity in the
+                            workplace </p>
+                        <a href="https://www.british-business-bank.co.uk/business-guidance/guidance-articles/staffing/how-to-promote-diversity-and-inclusivity-in-the-workplace"
+                            class="btn" target="_blank" rel="noopener"
+                            aria-label="link to the british business bank website (opens in a new tab)">Go to the
+                            British Business Bank website</a>
                     </div>
                 </div>
             </div>
