added aria label to home icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="d-flex flex-column min-vh-100">
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"><i class="fa-solid fa-globe"></i></a>
+            <a class="navbar-brand" href="./index.html" aria-label="Return to the top of the page"><i class="fa-solid fa-globe"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
