--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="col-12 col-md-4">
                 <h1 class="header-title display-1">Diversify</h1>
             </div>
-            <div class="row text-center justify-content-between">
+            <div class="row text-center justify-content-between mx-auto">
                 <div class="col-12 col-md-4">
                     <h2 class="header-title">
                         Diversity and Inclusion in the workplace
